--- a/css/main.css
+++ b/css/main.css
@@ -12,50 +12,6 @@ body {
   line-height: 22px;
 }
 
-.landing {
-  margin: 20px;
-}
-
-#main-slider {
-  padding: 30px 20px;
-}
-
-.landing .big-text h1 {
-  font-size: 96pt;
-}
-
-.landing .phones {
-  padding-top: 35px;
-}
-
-.landing h1, .landing h2, .landing h3 {
-  font-weight: 900;
-}
-
-.landing h1 {
-  font-size: 72pt;
-}
-
-.landing h2 {
-  font-size: 48pt;
-}
-
-.landing h3 {
-  font-size: 36pt;
-}
-
-.landing-footer {
-  text-align: right;
-}
-
-.red-text h1, .red-text h2, .red-text h3 {
-  color: #c52d2f;
-}
-
-.black-text h1, .black-text h2, .black-text h3 {
-  color: #4e4e4e;
-}
-
 h1,
 h2,
 h3,
@@ -365,15 +321,11 @@ body > section {
 }
 
 #main-slider .carousel .slide-margin {
-  margin-top: 270px;
-}
-
-#main-slider .carousel h1 {
-  color: black;
+  margin-top: 130px;
 }
 
 #main-slider .carousel h2 {
-  color: black;
+  color:#fff;
 }
 
 #main-slider .carousel .btn-slide {
@@ -401,7 +353,7 @@ body > section {
   position: absolute;
   width: 100%;
   display: block !important;
-  height: 630px;
+  height: 500px;
   -webkit-transition: opacity ease-in-out 500ms;
   -moz-transition: opacity ease-in-out 500ms;
   -o-transition: opacity ease-in-out 500ms;
