--- a/css/main.css
+++ b/css/main.css
@@ -197,6 +197,10 @@ body > section {
   margin: 0
 }
 
+.details p {
+  text-align: left;
+}
+
 .social{
   text-align: right;
 }
@@ -477,12 +481,13 @@ body > section {
   animation: fadeInUp 300ms linear 1200ms both;
 }
 
-#feature {
+.main-page-block {
   background: #f2f2f2;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
+  padding: 20px 0;
 }
 
-.features{
+.features {
   padding: 0;
 }
 
